# jenesis-templates

./: README.md
contracts/: multisig  nft  proxy  token
contracts/cw1-subkeys/: Cargo.toml
contracts/cw1155/: Cargo.toml
contracts/cw20/: Cargo.toml
contracts/cw20-base/: Cargo.toml
contracts/cw20/artifacts/: checksums.txt  checksums_intermediate.txt  cw20_base.wasm
contracts/cw20/schema/: cw20-base.json
contracts/cw3-fixed-multisig/: Cargo.toml
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/examples/: schema.rs
contracts/oracle/: Cargo.toml  README.md
contracts/oracle/examples/: schema.rs
contracts/oracle/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  state.json
contracts/oracle/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/oracle_client/: Cargo.toml  README.md
contracts/oracle_client/examples/: schema.rs
contracts/oracle_client/schema/: execute_msg.json  instantiate_msg.json  query_msg.json  state.json
contracts/oracle_client/src/: contract.rs  msg.rs  state.rs
contracts/starter/: Cargo.toml
contracts/starter/examples/: schema.rs
contracts/starter/src/: contract.rs
